--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="game-model">
         <div class="content">
-            <img src="/images/lost.gif" alt="image">
+            <img src="/hangman-game/hangman-game/images/lost.gif" alt="image">
             <h4>Game Over!</h4>
             <p>The Correct word was: <b>raindow</b></p>
             <button class="play-again">
@@ -28,7 +28,7 @@
     </div>
     <div class="container">
         <div class="hangman-box">
-            <img src="/images/hangman-0 copy.svg" alt="hangman-img">
+            <img src="/hangman-game//hangman-game/images/hangman-0 copy.svg" alt="hangman-img">
             <h1>Hangman Game</h1>
         </div>
         <div class="game-box">
